src/test/ui/consts/const-eval/issue-65394.stderr
error[E0658]: references in constants may only refer to immutable values
  --> $DIR/issue-65394.rs:8:13
   |
LL |     let r = &mut x;
   |             ^^^^^^ constants require immutable values
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/57349
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/issue-65394.rs:7:9
   |
LL |     let mut x = Vec::<i32>::new();
   |         ^^^^^ constants cannot evaluate destructors

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0493, E0658.
For more information about an error, try `rustc --explain E0493`.
